--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2"
+log = "0.4"
+env_logger = "0.11"
+url = "2.2"
+
+[dependencies.reqwest]
+version = "0.11"
+
+[dependencies.timeout-readwrite]
+version = "1.0"
